# 10.Building-and-connecting-libraries

Task_1/: Task_1.sln
Task_1/Greeter_client/: Greeter_client.cpp  Greeter_client.vcxproj  Greeter_client.vcxproj.filters
Task_1/Task_1/: Greeter.cpp  Greeter.h  Task_1.vcxproj
Task_2/Leaver_client/: Leaver_client.vcxproj
Task_2/Task_2/: Leaver.h  Task_2.vcxproj
Task_3/: CMakeLists.txt  Task_3.sln
Task_3/Leaver_client/: Leaver_client.cpp  Leaver_client.vcxproj  Leaver_client.vcxproj.filters
Task_3/Task_2/: Leaver.cpp  Leaver.h  Task_2.vcxproj
